--- a/anasayfa.html
+++ b/anasayfa.html
@@ -29,6 +29,12 @@
         .image-container {
             text-align: center;
             margin-top: 20px;
+           
+           
+        }
+
+        img {
+            max-width: 40%; /* Resimlerin sayfa genişliğini aşmaması için */
         }
     </style>
 </head>
@@ -44,7 +50,8 @@
     <p>Dünya'yı keşfetmeye hazır mısınız?</p>
 
     <div class="image-container">
-        <img src="file:///C:/frontend/img/ucak.jpg" alt="Uçak Resmi">
+        <img src="https://raw.githubusercontent.com/muharremosmantopakkaya/KodluyoruzCSS_Odev1/main/img/ucak.jpg" alt="Kamp Resmi">
+
     </div>
 </body>
 </html>
