--- a/kampbilgileri.html
+++ b/kampbilgileri.html
@@ -25,10 +25,11 @@
         .image-container {
             text-align: center;
             margin: 20px 0;
+        
         }
 
         img {
-            max-width: 100%; /* Resimlerin sayfa genişliğini aşmaması için */
+            max-width: 50%; /* Resimlerin sayfa genişliğini aşmaması için */
         }
     </style>
 </head>
@@ -44,7 +45,8 @@
     <p>Doğayla baş başa kalmak, şehrin stresinden uzaklaşmak ve huzur dolu bir zaman dilimi geçirmek istiyorsanız doğru yerdesiniz! Kamp yapmanın püf noktaları, gerekli ekipmanlar ve önerilen kamp yerleri hakkında bilgilere bu bölümde ulaşabilirsiniz.</p>
     
     <div class="image-container">
-        <img src="file:///C:/frontend/img/kamp.jpg" alt="Kamp Resmi">
+        <img src="https://raw.githubusercontent.com/muharremosmantopakkaya/KodluyoruzCSS_Odev1/main/img/kamp.jpg" alt="Kamp Resmi">
+
     </div>
 
     <h2>Kamp Yaparken Bilmeniz Gerekenler:</h2>
