--- a/seyahatipuclari.html
+++ b/seyahatipuclari.html
@@ -25,10 +25,12 @@
         .image-container {
             text-align: center;
             margin: 20px 0;
+            width: 75%;
+            height: auto;
         }
 
         img {
-            max-width: 100%; /* Resimlerin sayfa genişliğini aşmaması için */
+            max-width: 70%; /* Resimlerin sayfa genişliğini aşmaması için */
         }
     </style>
 </head>
@@ -44,7 +46,8 @@
     <p>Bir sonraki seyahatiniz için ihtiyaç duyabileceğiniz tüm ipuçlarına bu bölümde ulaşabilirsiniz. Uzun yıllara dayanan tecrübemizle, seyahatlerinizin keyifli ve sorunsuz geçmesi için önerilerimizi sizinle paylaşıyoruz.</p>
     
     <div class="image-container">
-        <img src="file:///C:/frontend/img/seyahatipucu.jpg" alt="Seyahat İpuçları Resmi">
+        <img src="https://raw.githubusercontent.com/muharremosmantopakkaya/KodluyoruzCSS_Odev1/main/img/seyahatipucu.jpg" alt="Seyahat İpuçları Resmi">
+
     </div>
 
     <h2>İşte Başarılı Bir Seyahat İçin İpuçları:</h2>
